--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+smash (1.1.0-1) wheezy; urgency=low
+
+  * New upstream release
+
+ -- Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>  Wed, 25 Nov 2015 23:30:27 +0900
+
 smash (1.0.1-1) wheezy; urgency=low
 
   * Initial release for 1.0.1
